# 2journ

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/config/: settings.py  swagger.py  urls.py
backend/journ_django/: asgi.py  settings.py  urls.py  wsgi.py
backend/places/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/places/migrations/: 0001_initial.py
backend/profiles/: admin.py  models.py
backend/profiles/management/commands/: seed.py
backend/profiles/migrations/: 0001_initial.py  0002_remove_customuser_profile_userprofile_user.py  0003_alter_customuser_id.py
backend/trips/: admin.py  models.py  serializers.py  urls.py
backend/trips/migrations/: 0001_initial.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Header.tsx  SidePanel.tsx
frontend/app/icons/: HomeIcon.tsx  LocationIcon.tsx  LogOutIcon.tsx  MyTripsIcon.tsx  ProfileIcon.tsx  SavedPlacesIcon.tsx  SearchIcon.tsx  SearchPlacesIcon.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/saved-places/: page.tsx
