[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth==7.0.2",
    "django>=5.2.8",
    "django-allauth>=65.14.0",
    "django-filter==25.2",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "djangorestframework-stubs>=3.16.7",
    "drf-yasg==1.21.14",
    "pillow==12.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uuid>=1.30",
]
